k8s/base/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: iam-system
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: iam
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
