k8s/base/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: iam-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: iam
spec:
  ingressClassName: traefik
  rules:
    # host patché par overlay selon l'environnement
    - host: keycloak.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
